# viewgraph

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  db.py  main.py  pyrightconfig.json  requirements.txt
alembic/: env.py
alembic/migrations/versions/: 08559e3b1341_.py  c23e08555462_.py
alembic/versions/: 2025_09_20_1729-b1e67da9b294_.py  2025_09_21_1630-76e9f919ba74_.py  797694eb79bc_.py
backend/: db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_21_1805-b5748b2029cd_.py  2025_09_21_1921-c68e93fcf69f_.py  2025_09_22_1653-78e910cb63e1_.py  2025_09_23_0854-b3d591ef9b10_.py
backend/all_models/: __init__.py
backend/statistics/: models.py  routers.py  schemas.py  services.py  utils.py
backend/videos/: models.py  routers.py  schemas.py  services.py  utils.py
